(fix): chat and group text overflow (#301)

--- a/plugins/Groups/app/groups.scss
+++ b/plugins/Groups/app/groups.scss
@@ -266,7 +266,7 @@ minds-groups-profile-members-invite {
     &.m-group-info-brief-description{
       span{
         white-space: pre-line;
-        word-break: break-word;
+        word-wrap: break-word;
       }
     }
 
