--- a/plugins/Messenger/app/messenger.scss
+++ b/plugins/Messenger/app/messenger.scss
@@ -245,7 +245,7 @@ minds-messenger{
         box-sizing: border-box;
         line-height: 14px;
         text-align:left;
-        word-break: break-word;
+        word-wrap: break-word;
         cursor:pointer;
       }
       .m-messenger-conversation-messages-message{
